# fourmat

./: components.json  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.vue  tools.ts
app/assets/: app.css
app/components/: AppHeader.vue  AppSidebar.vue  ImageSquare.vue
app/components/ui/sonner/: Sonner.vue
app/layouts/: default.vue
app/lib/: utils.ts
app/pages/: image-converter.vue  index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: image_convert.rs  lib.rs  main.rs
