[package]
name = "fourmat"
version = "0.1.0"
description = "Basic formatting capabilities for developers"
authors = ["aervxa"]
license = ""
repository = "https://github.com/aervxa/fourmat"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fourmat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
image = "0.25.6"
tauri-plugin-opener = "2"
